2014-06-21  klen

	* Version 0.6.1
	* Supports bash complete
	* Supports colors

2014-06-20  klen

	* Version 0.5.0
	* Fix lists operations
	* Add map
	* Fix python3

2014-06-19  klen

	* Version 0.1.0
	* Initial release