@@ -42,8 +42,8 @@ Change file's extension .html > .php ::
 
 Print all but the first three columns ::
 
-    # Atmark (\\t means tab)
-    $ ls -la | @ split_ drop 3 join \\t
+    # Atmark (\t means tab)
+    $ ls -la | @ split_ drop 3 join \t
 
     # Awk/Sed
     $ ls -la | awk '{for(i=1;i<4;i++) $i="";print}'
@@ -150,10 +150,10 @@ Get help
     LIST OF THE BUILT IN FUNCTIONS
 
 
-    format PATTERN 	 -- format and print a string.
+    format FORMAT_STRING 	 -- format and print a string.
 
-        Symbol '@' in PATTERN represents the current value in process of composition of fuctions.
-        Symbol '#' in PATTERN represents the history state.
+        Symbol '@' in FORMAT_STRING represents the current value in process of composition of fuctions.
+        Symbol '#' in FORMAT_STRING represents the history state.
             Where   # or #0 -- first state, #<n> (#1, #2) -- state with number n
 
         Synonyms: You can drop `format` function name. This lines are equalent:
@@ -177,6 +177,8 @@ Get help
 
     join_/j_ 		 -- same as join but SEPARATOR set as ' '
 
+    kill REGEXP 	 -- replace in a string/list REGEXP to ''.
+
     last 		 -- get last element/character of incoming list/string.
 
     length/len 		 -- return length of list/string.
@@ -185,9 +187,13 @@ Get help
 
     map FUNCTION 	 -- apply the following function to each element/character in list/string.
 
+    nocolor/nc 		 -- Remove ansi colors from string.
+
     notequal/!= PATTERN  -- return None if arg is equal to PATTERN.
 
-    replace/r/sub FROM TO  -- replace in a string/list FROM to TO.
+    notgrep/ng REGEXP 	 -- filter results by REGEXP. Leave ungrepped
+
+    replace/r/sub FROM TO -- replace in a string/list FROM to TO.
 
     reverse/rev 	 -- reverse list/string.
 
