@@ -1,3 +1,7 @@
+2014-06-24  klen
+
+	* Add kill, notgrep, nocolor
+
 2014-06-21  klen
 
 	* Version 0.6.1
